--- a/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
@@ -26,6 +26,7 @@
 // Universal Blocks
 @import "blocks/commons/_block-logos";
 @import "blocks/commons/_block-light-carousel";
+@import "blocks/commons/_block-dark-carousel";
 @import "blocks/commons/_block-news-grid";
 
 
