--- a/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
@@ -28,7 +28,8 @@
 @import "blocks/commons/_block-light-carousel";
 @import "blocks/commons/_block-dark-carousel";
 @import "blocks/commons/_block-news-grid";
-
+@import "blocks/commons/_block-patrons-inline";
+@import "blocks/commons/_block-follow";
 
 //Blocks Home
 @import "blocks/home/_block-hero";
