--- a/wp-content/themes/laureus-theme/front-dev/scss/_variables.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_variables.scss
@@ -10,6 +10,7 @@ $lgrey2: #dfe3e9;
 $lgrey3: #fafafa;
 $lgrey4: #f1f1f1;
 $lgrey5: #c9c9c9;
+$lgrey6: #dedee4;
 $txtgrey: #666666;
 $red: #e10e20; 
 
