--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-breadcrumb.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-breadcrumb.scss
@@ -1,3 +1,26 @@
 .bread-wrapper {
-	
+	background-color: $lgrey6;
+	width: 100%;
+	padding: em(20);
+	@include desktop {
+		padding: em(29);
+	}
+	ul {
+		padding: 0;
+		margin: 0;
+		li {
+			display: inline-block;
+			font-family: $book;
+			font-size: em(18);
+			.sep {
+				display: inline-block;
+				color: $dblue;
+				margin: 0 em(10); 
+			}
+			a {
+				color: $dblue;
+				font-family: $bold;
+			}
+		}
+	}
 }
