--- a/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
@@ -30,6 +30,7 @@
 @import "blocks/commons/_block-dark-carousel";
 @import "blocks/commons/_block-news-grid";
 @import "blocks/commons/_block-patrons-inline";
+@import "blocks/commons/_block-team-list";
 @import "blocks/commons/_block-follow";
 @import "blocks/commons/_block-breadcrumb";
 @import "blocks/commons/_hero-title";
