Backend base our work

--- a/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
@@ -44,3 +44,8 @@
 //Blocks About
 @import "blocks/about/_block-content";
 @import "blocks/about/_block-history";
+
+//Blocks Work
+@import "blocks/work/_block-content";
+@import "blocks/work/_block-cities";
+@import "blocks/work/_block-league";
